[package]
name = "parse_gossip_protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ring = "0.16.20"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.9"
hex = "0.4"
base64 = "0.13.0"

[[bin]]
name = "parse_gossip_protocol"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"
